update automatically created ini files (mame0258)

--- a/00-databases-00/sorted_info_creation/0XXX/90º.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/90º.ini
@@ -141,6 +141,7 @@ amazont
 amidar
 amidar1
 amidarb
+amidarb2
 amidarc
 amidaro
 amidars
@@ -183,6 +184,7 @@ arkanoidja
 arkanoidjb
 arkanoidjbl
 arkanoidjbl2
+arkanoidpe
 arkanoidu
 arkanoiduo
 arkatayt
@@ -496,6 +498,7 @@ cflyball
 cgraplop
 cgraplop2
 cgraplopj
+challeng
 chamburger
 champbwl
 champbwla
@@ -580,6 +583,7 @@ commsega
 complexx
 condor
 condorn
+condorva
 congo
 congoa
 conquer
@@ -670,12 +674,14 @@ cyvern
 cyvernj
 czeroize
 dai3wksi
+daifugo
 daikaiju
 daioh
 daioha
 daiohc
 daiohp
 daiohp2
+daiohp3
 daisenpu
 dambustr
 dambustra
@@ -825,6 +831,7 @@ dogyuun
 dogyuuna
 dogyuunb
 dogyuunt
+dogyuunto
 dommy
 donpachi
 donpachihk
@@ -982,6 +989,7 @@ firetrapa
 firetrapbl
 firetrapj
 firetrk
+firetrka
 fitter
 fitterbl
 fiveside
@@ -1022,6 +1030,7 @@ frogf
 frogg
 frogger
 froggeram
+froggereb
 froggermc
 froggers
 froggers1
@@ -2054,6 +2063,7 @@ pisces
 piscesb
 pitnrun
 pitnruna
+pitnrunb
 playball
 pleiadbl
 pleiadce
@@ -2194,7 +2204,6 @@ raiden2k
 raiden2nl
 raiden2sw
 raiden2u
-raidena
 raidenb
 raidendx
 raidendxa1
@@ -2207,6 +2216,7 @@ raidendxk
 raidendxnl
 raidendxpt
 raidendxu
+raidenj
 raidenk
 raidenkb
 raidenm
@@ -2272,6 +2282,7 @@ redhawk
 redhawke
 redhawkk
 redlin2p
+redline
 redrobin
 redufo
 redufob
@@ -2495,6 +2506,8 @@ silvmil
 sindbadm
 sinistar
 sinistar2
+sinistarc
+sinistarc2
 sinistarp
 sinvasn
 sinvasnb
@@ -2752,6 +2765,8 @@ suprheli
 suprmous
 suprridr
 suprstar
+supst834
+supst839
 survival
 swarm
 swat
