--- a/00-databases-00/sorted_info_creation/0XXX/classich.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/classich.ini
@@ -46,6 +46,7 @@ edracula
 efball
 efootb4
 egalaxn2
+einspace
 einvader
 einvader2
 einvaderc
@@ -57,6 +58,7 @@ esbattle
 esoccer
 estargte
 eturtles
+fingbowl
 flash
 funjacks
 funrlgl
@@ -86,7 +88,6 @@ h2hsoccerc
 hccbaskb
 horocomp
 horseran
-invspace
 kingman
 lafootb
 lostreas
@@ -125,6 +126,7 @@ racetime
 raisedvl
 rockpin
 rzbatfor
+skywriter
 splasfgt
 splitsec
 ssfball
