--- a/00-databases-00/sorted_info_creation/0XXX/good.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/good.ini
@@ -214,6 +214,7 @@ actfancrj
 actionhw
 ad2083
 adam
+addocalc
 adillor
 adillorj
 adpoker
@@ -396,6 +397,7 @@ amico2k
 amidar
 amidar1
 amidarb
+amidarb2
 amidaro
 amidars
 amidaru
@@ -582,6 +584,7 @@ arkanoidja
 arkanoidjb
 arkanoidjbl
 arkanoidjbl2
+arkanoidpe
 arkanoidu
 arkanoiduo
 arkarea
@@ -2198,6 +2201,7 @@ comotionp
 comp4
 compani1
 comparc
+comparca
 compgolf
 compgolfo
 compis
@@ -2207,13 +2211,17 @@ compperf
 comx35n
 comx35p
 conc
+conca
 concams
 concams5
 concept
 concgla
+concglap
+concglapa
 concvicp
 condor
 condorn
+condorva
 congo
 congoa
 conquest
@@ -2289,6 +2297,7 @@ cottonu
 cottonud
 countdwn
 countrunb
+countrunb3
 countryc
 couple
 couplei
@@ -2597,6 +2606,7 @@ dagz80
 dai
 dai2kaku
 dai3wksi
+daifugo
 daikaiju
 daimakai
 daimakair
@@ -2704,6 +2714,7 @@ dcclubj
 dcebridge
 dcheese
 dcon
+dd9
 dd_l2
 dd_lu1
 dd_p6
@@ -3084,6 +3095,7 @@ dogyuun
 dogyuuna
 dogyuunb
 dogyuunt
+dogyuunto
 dokaben
 dokaben2
 dokidoki
@@ -3370,6 +3382,7 @@ ehrgeizua
 eightfrc
 eightman
 einning
+einspace
 einst256
 einstein
 einvader
@@ -3782,11 +3795,12 @@ feag2100
 feag2100a
 feagv10
 feagv11
-feagv2
-feagv3
+feagv4
+feagv4a
 feagv5
 feagv7
 feagv7a
+feagv7b
 feagv9
 feas
 feasbu
@@ -3827,6 +3841,8 @@ ffantasyb
 ffantasyj
 ffight
 ffight2b
+ffight3b
+ffight3b2
 ffighta
 ffightae
 ffightbl
@@ -3902,6 +3918,7 @@ findlove
 findout
 findouta
 finehour
+fingbowl
 finger
 fire_l2
 fire_l3
@@ -3922,6 +3939,7 @@ firetrapa
 firetrapbl
 firetrapj
 firetrk
+firetrka
 fishfren
 fitegolf
 fitegolfu
@@ -4070,6 +4088,7 @@ frogf
 frogg
 frogger
 froggeram
+froggereb
 froggermc
 froggers
 froggers1
@@ -4100,6 +4119,9 @@ fruitstba
 fruitstbb
 fruitstbc
 fruitstbd
+fruitstbe
+fruitstbf
+fruitstbg
 fs1300
 fs4000
 fs4000a
@@ -5052,6 +5074,7 @@ h2hhockey
 h2hhockeyc
 h2hsoccerc
 h8
+h89
 hachamf
 hachamfa
 hachamfb
@@ -5131,6 +5154,7 @@ hasamu
 hatena
 hatris
 hatrisj
+hatrisp
 hattrick
 hayaosi1
 hayaosi2
@@ -5566,6 +5590,9 @@ incasunnz
 ind250cc
 indianbt
 indianbtbr
+indigo
+indigo_r4000
+indigo_r4400
 indy_4610
 indy_4613
 indy_5015
@@ -5651,7 +5678,6 @@ invrvngea
 invrvngeb
 invrvngedu
 invrvngegw
-invspace
 inyourfa
 iowapp
 ipb
@@ -5988,6 +6014,7 @@ jingbella
 jingbellb
 jingbellc
 jingbelli
+jingling
 jitsupro
 jituroku
 jjack
@@ -6181,6 +6208,7 @@ kaiserknj
 kaitei
 kaiteids
 kaitein
+kaiunqz
 kakumei
 kakumei2
 kamakazi3
@@ -6541,6 +6569,7 @@ ktiger
 ktiger2
 ktigera
 ktmnt
+ktmnt2
 ktmnt3
 ktmntbb
 ktopgun
@@ -6715,7 +6744,7 @@ leonardoa
 leonardob
 lependu
 leprechn
-leprechp
+leprechna
 lespendu
 lespenduj
 lethalen
@@ -6800,8 +6829,9 @@ lkageb
 lkageb2
 lkageb3
 lkageb4
+lkagem
 lkageo
-lkageoo
+lkageo2
 llander
 llander1
 llandert
@@ -6986,6 +7016,8 @@ mac512ke
 maccclas
 macclas2
 macclasc
+macct610
+macct650
 mace
 macea
 mach3
@@ -7008,8 +7040,19 @@ maciix
 maclc
 maclc2
 maclc3
+maclc3p
+maclc475
 maclc520
+maclc550
+maclc575
+maclc580
 macplus
+macqd605
+macqd610
+macqd630
+macqd650
+macqd700
+macqd800
 macross
 macross2
 macross2g
@@ -7118,6 +7161,7 @@ majxtal7
 makaiden
 makaijan
 makaimur
+makaimurb
 makaimurc
 makaimurg
 maketrax
@@ -7296,6 +7340,7 @@ mcontest
 md6802
 mdallas
 mdchoice
+mdhorse
 mdndclab
 mdrawpkr
 mdrawpkra
@@ -7380,7 +7425,7 @@ megrescu
 meijinsn
 meijinsna
 meikyuh
-meikyuha
+meikyuhbl
 mekd1
 mekd2
 mekd3
@@ -7548,6 +7593,7 @@ miniscc
 miniscco
 minitel2
 minivadr
+minspace
 mirage
 mirax
 miraxa
@@ -7674,6 +7720,7 @@ mkit09
 mkla1
 mkla2
 mkla3
+mkla3bl
 mkla4
 mknifty
 mknifty666
@@ -7845,6 +7892,7 @@ moonwarp
 morataka
 moremore
 moremorp
+mortalr
 mosaic
 mosaica
 mosaicf2
@@ -8299,6 +8347,7 @@ nemesis
 nemesisuk
 nemo
 nemoj
+nemoja
 nemor1
 neobattl
 neobombe
@@ -8516,6 +8565,7 @@ nynyg
 nytsudo
 nzeroteam
 nzeroteama
+nzeroteamb
 ob68k1a
 oc2000
 odyssey2
@@ -8647,6 +8697,7 @@ osborne1nv
 osborne1sp
 oscar
 oscara5a
+oscarbl
 oscarj1
 oscarj2
 oscaru
@@ -8986,6 +9037,7 @@ pdrifta
 pdrifte
 pdriftj
 pdriftl
+pebe0013
 pebe0014
 pebe0014a
 pecom32
@@ -9066,6 +9118,7 @@ pepk1024
 pepp0001
 pepp0002
 pepp0002a
+pepp0005
 pepp0006
 pepp0008
 pepp0008a
@@ -9082,6 +9135,7 @@ pepp0040b
 pepp0041
 pepp0042
 pepp0042a
+pepp0042b
 pepp0043
 pepp0043a
 pepp0043b
@@ -9103,6 +9157,7 @@ pepp0050a
 pepp0050b
 pepp0050c
 pepp0051
+pepp0052
 pepp0053
 pepp0054
 pepp0055
@@ -9125,9 +9180,11 @@ pepp0064
 pepp0065
 pepp0078
 pepp0083
+pepp0083a
 pepp0085
 pepp0089
 pepp0094
+pepp0094a
 pepp0103
 pepp0103a
 pepp0103b
@@ -9136,9 +9193,12 @@ pepp0104
 pepp0104a
 pepp0116
 pepp0116a
+pepp0117
 pepp0118
 pepp0120
+pepp0122
 pepp0125
+pepp0125a
 pepp0126
 pepp0126a
 pepp0126b
@@ -9148,6 +9208,7 @@ pepp0127b
 pepp0129
 pepp0130
 pepp0132
+pepp0143
 pepp0150
 pepp0158
 pepp0158a
@@ -9213,19 +9274,23 @@ pepp0410a
 pepp0417
 pepp0417a
 pepp0418
+pepp0418a
 pepp0419
 pepp0419a
 pepp0419b
 pepp0420
+pepp0420a
 pepp0423
 pepp0423a
 pepp0423b
 pepp0423c
+pepp0425
 pepp0426
 pepp0428
 pepp0429
 pepp0429a
 pepp0430
+pepp0430a
 pepp0431
 pepp0434
 pepp0434a
@@ -9236,6 +9301,7 @@ pepp0447b
 pepp0449
 pepp0449a
 pepp0450
+pepp0451
 pepp0452
 pepp0452a
 pepp0453
@@ -9244,10 +9310,13 @@ pepp0454a
 pepp0455
 pepp0458
 pepp0459
+pepp0459a
 pepp0467
+pepp0469
 pepp0472
 pepp0488
 pepp0508
+pepp0508a
 pepp0509
 pepp0510
 pepp0514
@@ -9266,6 +9335,7 @@ pepp0531
 pepp0536
 pepp0538
 pepp0540
+pepp0540a
 pepp0542
 pepp0542a
 pepp0542b
@@ -9284,13 +9354,16 @@ pepp0725
 pepp0725a
 pepp0726
 pepp0728
+pepp0729
 pepp0733
 pepp0750
+pepp0750a
 pepp0757
 pepp0760
 pepp0763
 pepp0764
 pepp0775
+pepp0777
 pepp0797
 pepp0812
 pepp0816
@@ -9379,6 +9452,7 @@ pettanp
 pex0002p
 pex0002pa
 pex0006p
+pex0014p
 pex0040p
 pex0042p
 pex0045p
@@ -9416,6 +9490,7 @@ pex0057pf
 pex0057pg
 pex0060p
 pex0124p
+pex0127p
 pex0150p
 pex0158p
 pex0171p
@@ -9433,6 +9508,7 @@ pex0417p
 pex0426p
 pex0430p
 pex0434p
+pex0444p
 pex0447p
 pex0449p
 pex0451p
@@ -9467,6 +9543,7 @@ pex0846s
 pex0998s
 pex1087s
 pex2002p
+pex2004p
 pex2010p
 pex2016p
 pex2017p
@@ -9491,6 +9568,7 @@ pex2042p
 pex2043p
 pex2044p
 pex2045p
+pex2046p
 pex2066p
 pex2067p
 pex2068p
@@ -9643,6 +9721,10 @@ phrcrazeb
 phrcrazec
 phrcrazev
 phtetris
+pi4d20
+pi4d25
+pi4d30
+pi4d35
 piccolop
 pickin
 pickwin
@@ -9788,6 +9870,7 @@ pitfightb
 pitfightj
 pitnrun
 pitnruna
+pitnrunb
 pjoyn50
 pjoys30
 pjoys60
@@ -9847,6 +9930,8 @@ pnickj
 pnkpnthr
 pnyaa
 pnyaaa
+pocketbk
+pocketbk2
 pocketrc
 pockstat
 pofo
@@ -10103,6 +10188,14 @@ przfight
 psailor1
 psailor2
 psi98
+psion3
+psion3a
+psion3a2
+psion3a2_de
+psion3a2_ru
+psion3c
+psion3mx
+psion3s
 psion5mx
 psioncm
 psionhc100
@@ -10116,6 +10209,8 @@ psionlz64s
 psionp200
 psionp350
 psionp464
+psionwa
+psionwamx
 psionxp
 psoldier
 pspikes
@@ -10174,7 +10269,6 @@ puckmanf
 puckmanh
 puckmod
 puckpkmn
-puckpkmna
 puckpkmnb
 pulirula
 pulirulaa
@@ -10200,6 +10294,7 @@ punkshot2
 punkshot2e
 punkshotj
 pururun
+pururuna
 pushman
 pushmana
 pushmans
@@ -10291,7 +10386,7 @@ qixb
 qixo
 qjinsei
 qkracer
-qkracerm
+qkracera
 qkspeller
 ql
 ql_de
@@ -10497,7 +10592,6 @@ raiden2k
 raiden2nl
 raiden2sw
 raiden2u
-raidena
 raidenb
 raidendx
 raidendxa1
@@ -10510,6 +10604,7 @@ raidendxk
 raidendxnl
 raidendxpt
 raidendxu
+raidenj
 raidenk
 raidenkb
 raident
@@ -11101,6 +11196,7 @@ rygar
 rygar2
 rygar3
 rygarj
+rygarj2
 ryorioh
 ryouran
 ryourano
@@ -11259,6 +11355,7 @@ sboblboblf
 sbomber
 sbombera
 sbowling
+sbp
 sbrkout
 sbrkout3
 sbrkoutc
@@ -11335,7 +11432,9 @@ scorpio68
 scorpion
 scorpiona
 scorpionb
+scorpiongmx
 scorpionmc
+scorpiontb
 scotrsht
 scp300f
 scptchess
@@ -11868,6 +11967,7 @@ sidepcktb
 sidepcktj
 sidetrac
 sidewndr
+siena
 sigma2k
 sigmapkr
 silentd
@@ -11906,6 +12006,8 @@ sinbadn
 sindbadm
 sinistar
 sinistar2
+sinistarc
+sinistarc2
 sinistarp
 sintez2
 sinvasn
@@ -11949,6 +12051,7 @@ skychal
 skychut
 skydest
 skydiver
+skyfire
 skyfox
 skykid
 skykidd
@@ -11973,6 +12076,7 @@ skysoldrbl
 skywolf
 skywolf2
 skywolf3
+skywriter
 slamdnk2
 slammast
 slammastu
@@ -12095,6 +12199,7 @@ snowboara
 snowbro2
 snowbro2b
 snowbro2b2
+snowbro2b3
 snowbro2ny
 snowbro3
 snowbros
@@ -12424,6 +12529,7 @@ sprint2a
 sprint2h
 sprint4
 sprint4a
+sprint4b
 sprint8
 sprint8a
 sprinter
@@ -12727,6 +12833,7 @@ strkfgtrj
 strkforc
 strkzone
 strnskil
+strobe
 strongx
 strtdriv
 strtheat
@@ -12770,7 +12877,6 @@ supdrapo
 supdrapoa
 supdrapob
 supduck
-super19
 super21
 super21p
 super80
@@ -12850,6 +12956,7 @@ suratka
 suratkj
 sureshot
 surfplnt
+surfplnt20
 surfplnt30
 surfplnt40
 survarts
@@ -13126,6 +13233,7 @@ tecjmon
 tecnbras
 teddybb
 teddybbo
+teddybboa
 teddybbobl
 teedoff
 teedoffj
@@ -13201,6 +13309,7 @@ terrafb
 terrafj
 terrafjb
 terrafu
+terrafua
 tesa6240
 tesorone
 tesorone230
@@ -13862,8 +13971,12 @@ turbofrco
 turbofrcu
 turbofrcua
 turbosub
-turbosub6
-turbosub7
+turbosubb8
+turbosubc5
+turbosubc5s
+turbosubc6
+turbosubc7
+turbosubc8
 turbotag
 turfmast
 turkhunt
@@ -13901,6 +14014,7 @@ twcup90a
 twcup90b
 twcup90b1
 twcup90b2
+twcup90b3
 twcup90ba
 twcup90bb
 twcup90c
@@ -13970,7 +14084,6 @@ uk101
 uk2086
 ultennis
 ultennisj
-ultra19
 ultracin
 ultrainv
 ultraman
@@ -14003,7 +14116,6 @@ unkch1
 unkch2
 unkch3
 unkch4
-unkeinv
 unkhorse
 unkitpkr
 unkpacg
@@ -14427,9 +14539,9 @@ warrior
 warriorb
 warzard
 warzardr1
+wasafari
 waterski
 watrball
-watz19
 waveshrk
 wavesynth
 wb3
@@ -14738,6 +14850,7 @@ x1turbo40
 x2222
 x2222o
 x68000
+x80wc
 x820
 xday2
 xegs
