update automatically created ini files (mame0259)

--- a/00-databases-00/sorted_info_creation/0XXX/90º.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/90º.ini
@@ -334,6 +334,7 @@ bigevglfj
 bigkong
 bigkonggx
 bigprowr
+bigprowra
 bikkuric
 billiard
 bioatack
@@ -704,6 +705,7 @@ dcheese
 ddaydoo
 ddayjlc
 ddayjlca
+dddoor
 ddonpach
 ddonpacha
 ddonpachj
@@ -1629,6 +1631,7 @@ madgear
 madgearj
 madshark
 madsharkbl
+mag_boob
 mag_day
 mag_time
 mag_war
@@ -1670,6 +1673,7 @@ mazeinv
 mazinger
 mazingerj
 mbrush
+mcwars
 megadon
 megaforc
 megaforcu
@@ -2470,6 +2474,7 @@ sengekis
 sengekisj
 senjyo
 setaroul
+setaroula
 sexyboom
 sfkick
 sfkicka
@@ -2870,6 +2875,7 @@ timeplta
 timepltc
 timescan
 timescan1
+timescan3
 timesold
 timesold1
 tinv2650
@@ -2935,6 +2941,7 @@ tron4
 tron5
 tronger
 troopy
+tropchnc
 truxton
 truxton2
 trvchlng
