--- a/00-databases-00/sorted_info_creation/0XXX/good.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/good.ini
@@ -393,6 +393,7 @@ amerdart2
 amerdart3
 americna
 americnaa
+amerug
 amico2k
 amidar
 amidar1
@@ -1041,6 +1042,7 @@ bigkarnk
 bigkong
 bigkonggx
 bigprowr
+bigprowra
 bigrun
 bigrunu
 bigstrik
@@ -1361,9 +1363,11 @@ brickzn
 brickzn11
 brickznv4
 brickznv5
+bridgeb
 bridgec
 bridgec3
 bridgeca
+bridgecv
 brival
 brivalj
 brix
@@ -1387,6 +1391,7 @@ brvbladeu
 brvteam
 bs4thmix
 bs94
+bscompmx
 bsebman
 bshark
 bsharkj
@@ -1434,6 +1439,7 @@ btlfieldb
 btlkroad
 btlkroadk
 btoads
+btplay2k
 bub68705
 bubblem
 bubblemj
@@ -2645,6 +2651,7 @@ dangarbt
 dangarj
 dangerex
 dangerz
+dangerz0
 dangseed
 dankuga
 daraku
@@ -3066,6 +3073,7 @@ dn3000
 dn3000_19i
 dn3500
 dn3500_19i
+dnbanban
 dnce2000
 dngrtrck
 dnmtdeka
@@ -3487,6 +3495,8 @@ espgal2a
 espgal2b
 espgalbl
 espial
+espialj
+espialn
 espialu
 esprade
 espradej
@@ -3576,6 +3586,7 @@ f14_p4
 f14_p5
 f15se
 f15se21
+f15se22
 f1dream
 f1dreamb
 f1dreamba
@@ -3639,6 +3650,8 @@ fantzoneta
 fapocket
 farmer
 fashion
+fashiong
+fashiong2
 fastfred
 fastlane
 fatfursp
@@ -3708,14 +3721,6 @@ fbcrazy
 fbdeluxe
 fbdeluxeo
 fbfrenzy
-fccpu1
-fccpu20sbc
-fccpu21asbc
-fccpu21bsbc
-fccpu21sbc
-fccpu21ssbc
-fccpu21yasbc
-fccpu21ybsbc
 fcnudge
 fcnudgeo
 fcnudgeo2
@@ -3988,6 +3993,7 @@ flickyo
 flickys1
 flickys2
 flickyup
+flickyupa
 flipjack
 flipmaze
 flipshot
@@ -4009,6 +4015,7 @@ flytigera
 fm7
 fm77av
 fm8
+fmaniac2p
 fmaniac3
 fmnew7
 fmx
@@ -4448,6 +4455,7 @@ gdarius
 gdarius2
 gdariusj
 gdariusu
+gderby
 gdfs
 gdigdug
 geebee
@@ -4953,6 +4961,7 @@ gtsers1
 gtsers10
 gtsers11
 gtsers11a
+gtsers11b
 gtsers12
 gtsers12a
 gtsers14
@@ -5292,6 +5301,7 @@ hiimpactp
 himesiki
 hipai
 hipai2
+hipoly
 hippodrm
 hiryuken
 hishouza
@@ -5307,7 +5317,6 @@ hitnmiss
 hitnmiss2
 hjingi
 hjingia
-hk68v10
 hkagerou
 hkc8800a
 hldspin1
@@ -6564,6 +6573,7 @@ krybolov
 krzybowl
 ksayakyu
 kskatedie
+kst25
 kt76
 ktiger
 ktiger2
@@ -6573,6 +6583,7 @@ ktmnt2
 ktmnt3
 ktmntbb
 ktopgun
+ktopgun2
 kuhga
 kungfub
 kungfub2
@@ -6758,6 +6769,7 @@ lethalenub
 lethalenux
 lethalj
 lethalth
+letsdnce
 letterlf
 letterlg
 levers
@@ -7077,6 +7089,7 @@ madshark
 madsharkbl
 madzoo
 mag10
+mag_boob
 mag_burn
 mag_day
 mag_exzi
@@ -7337,6 +7350,7 @@ mcitylov
 mcnpshnt
 mcompgin
 mcontest
+mcwars
 md6802
 mdallas
 mdchoice
@@ -7848,6 +7862,7 @@ montec4
 montec4le
 monteca
 montecar
+montreal
 montree
 montreux
 monty
@@ -8171,7 +8186,6 @@ mutantf4
 mutnat
 mv4in1
 mvbfree
-mvme147
 mvp
 mvpd
 mvpj
@@ -9013,7 +9027,6 @@ pcega
 pcg815
 pcherc
 pcipc
-pcipctx
 pcktgal
 pcktgal2
 pcktgal2j
@@ -10141,6 +10154,7 @@ prehisleb
 prehislek
 prehisleu
 preisle2
+premiere
 prestmpt
 prikura
 primella
@@ -10429,6 +10443,7 @@ quasar
 quasara
 quester
 questers
+quickjac
 quickp5
 quintono
 quintoon
@@ -10809,6 +10824,7 @@ redufob
 redufob2
 redufob3
 reelfun
+reelfun0
 reelfun1
 reelpwr
 reelquak
@@ -11009,6 +11025,7 @@ robokid
 robokidj
 robokidj2
 robokidj3
+robotadv
 robotbwl
 robotron
 robotron12
@@ -11072,6 +11089,7 @@ rollr_l3
 rollr_p2
 roma16
 roma16a
+roma2
 roma32
 rompers
 romperso
@@ -11560,6 +11578,7 @@ sentx6pd
 sentx6puk
 senwfit
 setaroul
+setaroula
 sexappl
 sexperta
 sexperta1
@@ -12027,6 +12046,8 @@ sjcd2kx3
 sjryuko
 sjryuko1
 skatekds
+skattv
+skattva
 skelagon
 skijump
 skill98
@@ -12699,6 +12720,7 @@ stadhr96u
 stagger1
 stakwin
 stakwin2
+stankatk
 star100
 starblad
 starbladj
@@ -13003,6 +13025,7 @@ svisions
 svolley
 svolleyk
 svolleyu
+svolleyua
 svolly91
 svs
 swa
@@ -13508,6 +13531,7 @@ timeplta
 timepltc
 timescan
 timescan1
+timescan3
 timesold
 timesold1
 timetp25
@@ -13845,6 +13869,7 @@ trojan
 trojana
 trojanb
 trojanj
+trojanjo
 trojanlt
 trojanr
 tron
@@ -13873,6 +13898,7 @@ trstaro
 trstaroj
 trsvidtx
 trthuball
+truckk
 truco
 truxton
 truxton2
@@ -14064,6 +14090,7 @@ txmenpx
 tylz
 typhoon
 uballoon
+uboat
 uccops
 uccopsar
 uccopsaru
@@ -14080,6 +14107,7 @@ ufombs
 ufomini
 ufosensi
 ufosensib
+ujlnow
 uk101
 uk2086
 ultennis
@@ -14252,7 +14280,6 @@ vblokbrka
 vbowl
 vbowlhk
 vbowlj
-vbrc
 vc4000
 vc6000
 vcarn
@@ -14566,6 +14593,7 @@ wbmlb
 wbmlbg
 wbmlbge
 wbmld
+wbmlh
 wbmljb
 wbmljo
 wbmljod
@@ -14921,6 +14949,7 @@ xorworld
 xsleena
 xsleenab
 xsleenaba
+xsleenabb
 xsleenaj
 xtheball
 xtrain
