update automatically created ini files (mame0260)

--- a/00-databases-00/sorted_info_creation/0XXX/90º.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/90º.ini
@@ -873,6 +873,7 @@ dsaberj
 dspirit
 dspirit1
 dspirit2
+dtrvwz5v
 dualaslt
 dyger
 dygera
@@ -1200,6 +1201,7 @@ gondo
 gondou
 gorf
 gorfpgm1
+gorfpgm1f
 gorfpgm1g
 gorkans
 gotya
@@ -1941,6 +1943,7 @@ pacgal2
 pacheart
 pachifev
 packbang
+packbangp
 pacman
 pacmanbl
 pacmanbla
@@ -2955,8 +2958,8 @@ trvquest
 trvwz2
 trvwz2a
 trvwz3v
-trvwz4
-trvwz4a
+trvwz4v
+trvwz4va
 trvwzv
 tryout
 tsamurai
