--- a/00-databases-00/sorted_info_creation/0XXX/good.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/good.ini
@@ -335,6 +335,7 @@ aligatoruna
 alinvade
 alleymas
 alm16
+alm16a
 alm32
 alnattck
 alnchase
@@ -796,6 +797,7 @@ b3rinsya
 b500
 babbage
 babydad
+babyfrts
 babypac
 babypac2
 babypkr
@@ -1439,7 +1441,6 @@ btlfieldb
 btlkroad
 btlkroadk
 btoads
-btplay2k
 bub68705
 bubblem
 bubblemj
@@ -1682,6 +1683,7 @@ cashquiz
 casino5
 casino5a
 casino5b
+casloopy
 caspoker
 caspokera
 caspokerb
@@ -1741,6 +1743,11 @@ cbnj
 cbombers
 cbombersj
 cbombersp
+cbrava
+cbravaa
+cbravab
+cbravac
+cbravad
 cbtime
 cburnrub
 cburnrub2
@@ -2305,9 +2312,6 @@ countdwn
 countrunb
 countrunb3
 countryc
-couple
-couplei
-couplep
 cp2000
 cp400
 cp400c2
@@ -2568,6 +2572,7 @@ cycln_l4
 cycln_l5
 cyvern
 cyvernj
+cz101
 czeroize
 czmon
 czmon_12
@@ -2899,6 +2904,7 @@ demonwld1
 demonwld2
 demonwld3
 demonwld4
+demonwld5
 dendego
 dendego2
 dendego23k
@@ -3266,6 +3272,7 @@ dtfamily
 dtkerso
 dtoyoken
 dtrvwz5
+dtrvwz5v
 dturbogt
 dualaslt
 duckhunt
@@ -4491,6 +4498,7 @@ genmod
 genpeitd
 gensitou
 geostorm
+geostorma
 gepoker
 gepoker1
 gepoker2
@@ -4735,6 +4743,7 @@ goonies
 goori
 gorf
 gorfpgm1
+gorfpgm1f
 gorfpgm1g
 gorkans
 gorodki
@@ -5940,6 +5949,7 @@ jackler
 jackrabt
 jackrabt2
 jackrabts
+jackuse
 jailbrek
 jailbrekb
 jajamaru
@@ -6769,7 +6779,6 @@ lethalenub
 lethalenux
 lethalj
 lethalth
-letsdnce
 letterlf
 letterlg
 levers
@@ -7247,7 +7256,6 @@ mastfury
 mastkin
 mastmind
 match98
-matchemg
 matchit
 matchit2
 matchme
@@ -7699,6 +7707,7 @@ mjsikakd
 mjsikaku
 mjsister
 mjuraden
+mjvegas
 mjvegasa
 mjyarou
 mjyarou2
@@ -8386,6 +8395,8 @@ new2001
 newapunk
 newfant
 newfanta
+newhunter
+newhunterb
 newmcard
 newpuc2
 newpuc2b
@@ -8781,6 +8792,7 @@ pacheart
 pachifev
 pachiten
 packbang
+packbangp
 packmon
 pacland
 paclandj
@@ -9859,6 +9871,7 @@ pitboss03a
 pitboss03b
 pitboss04
 pitboss2
+pitbossa
 pitbossm
 pitbossm4
 pitbossma
@@ -10883,7 +10896,7 @@ revngr84
 revx
 revxp5
 rezon
-rezont
+rezono
 rf2
 rfjet
 rfjet2kc
@@ -11579,6 +11592,11 @@ sentx6puk
 senwfit
 setaroul
 setaroula
+sevilla
+sevillaa
+sevillab
+sevillac
+sevillad
 sexappl
 sexperta
 sexperta1
@@ -12269,6 +12287,7 @@ soldivid
 soldividk
 solfight
 solfigtr
+solitaire
 solomon
 solomonj
 solrwarr
@@ -13107,6 +13126,7 @@ t1000hx
 t1000rl
 t1000sl2
 t1000sx
+t1000tl
 t1000tl2
 t1000tx
 t3in1sa
@@ -13492,6 +13512,7 @@ ti99_8e
 tibusan
 tickee
 tictac
+tictaca
 tictacv
 tigarden
 tigerh
@@ -13703,6 +13724,9 @@ tokkae
 tokyogal
 tokyowar
 tokyowarj
+toledo
+toledoa
+toledob
 tomagic
 tomahawk
 tomahawk1
@@ -13832,6 +13856,7 @@ triplepa
 triplew1
 triplew2
 triplfun
+triplfunk
 triplhnt
 tripool
 tripoola
@@ -13912,16 +13937,18 @@ trvmstrb
 trvmstrc
 trvmstrd
 trvquest
+trvwz
 trvwz2
 trvwz2a
-trvwz3h
-trvwz3ha
+trvwz3
+trvwz3a
+trvwz3b
 trvwz3v
 trvwz4
-trvwz4a
-trvwzh
-trvwzha
-trvwzhb
+trvwz4v
+trvwz4va
+trvwza
+trvwzb
 trvwzv
 tryomvgc
 tryout
