update automatically created ini files (mame0261)

--- a/00-databases-00/sorted_info_creation/0XXX/90º.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/90º.ini
@@ -171,6 +171,7 @@ aponow
 arabian
 arabiana
 aracnis
+aracnisa
 arbalest
 arcadian
 argus
@@ -231,6 +232,7 @@ astrof2
 astrof3
 astroff
 astroff2
+astroft
 astrowar
 asuka
 asukaj
@@ -388,6 +390,7 @@ bombbee
 bomber
 bombjack
 bombjack2
+bombjackbl
 bombjackt
 bombsa
 bongo
@@ -629,6 +632,7 @@ cptennisj
 crashrd
 crazyblk
 crazycop
+crazym
 crbaloon
 crbaloon2
 crockman
@@ -1063,6 +1067,7 @@ futaribl
 futariblj
 futflash
 futspy
+fwheel
 fx
 gaiapols
 gaiapolsj
@@ -1529,6 +1534,7 @@ kingdmgp
 kingofb
 kingofbj
 knightb
+knightba
 knockout
 knockoutb
 knockoutc
@@ -1980,6 +1986,7 @@ pandoras
 panic
 panic2
 panic3
+panic4
 panicger
 panich
 panicr
@@ -2077,6 +2084,7 @@ pleiadce
 pleiads
 pleiadsb2
 pleiadsi
+pleiadsia
 pleiadsn
 pleiadss
 plgirls
@@ -2139,6 +2147,7 @@ psyvarij
 psyvarrv
 pturn
 puckman
+puckmana
 puckmanb
 puckmanf
 puckmanh
@@ -2234,6 +2243,7 @@ raidenub
 raiders
 raidersr3
 rallybik
+rallyxeg
 raphero
 rapheroa
 rayforce
@@ -2279,6 +2289,7 @@ re800v3
 re900
 reaktor
 redalert
+redbird
 redclash
 redclashs
 redclasht
@@ -2439,6 +2450,7 @@ scorpiona
 scorpionb
 scorpionmc
 scotrsht
+scrabbleo
 scramb2
 scramb3
 scramblb
