--- a/00-databases-00/sorted_info_creation/0XXX/good.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/good.ini
@@ -76,6 +76,7 @@
 3x3puzzla
 4004clk
 40love
+40lovebl
 40lovej
 4dwarrio
 4enraya
@@ -109,6 +110,7 @@
 800fath
 800fatha
 88games
+88in1joy
 8ball
 8ball1
 8ballact
@@ -679,6 +681,7 @@ astrof3
 astroff
 astroff2
 astrofl
+astroft
 astropal
 astrowar
 astyanax
@@ -945,6 +948,7 @@ bbmanwj
 bbmanwja
 bbnny_l2
 bbnny_lu
+bbombo
 bbonk
 bbprot
 bbredux
@@ -976,6 +980,7 @@ beastfp
 beastrzr
 beastrzra
 beathead
+beena
 beezer
 beezer1
 benberob
@@ -1275,6 +1280,7 @@ bombbee
 bomber
 bombjack
 bombjack2
+bombjackbl
 bombjackt
 bombkick
 bombkicka
@@ -1796,7 +1802,6 @@ ccmk2
 ccmk2a
 ccmk5
 ccmk6
-ccompan
 ccs2810
 cd2650
 cd6809
@@ -1934,6 +1939,7 @@ chickna5
 chikij
 chiller
 chimerab
+chimeraba
 chinagat
 chinatow
 chinatwn
@@ -2212,6 +2218,8 @@ commsega
 comotion
 comotionp
 comp4
+compan
+compan2
 compani1
 comparc
 comparca
@@ -2378,6 +2386,7 @@ crazybon
 crazybona
 crazycop
 crazyfgt
+crazym
 crazywar
 crbaloon
 crbaloon2
@@ -2572,6 +2581,7 @@ cycln_l4
 cycln_l5
 cyvern
 cyvernj
+cz1
 cz101
 czeroize
 czmon
@@ -2959,6 +2969,7 @@ dgun2500
 dgun2573
 dgun2573a
 dgun2869
+dgun2959
 dgun851
 dgun853
 dgunl3227
@@ -3141,6 +3152,7 @@ doraglob
 doraglobg
 dorapdc
 doraphon
+doraphonf
 dorodon
 dorodon2
 dorunrun
@@ -3394,6 +3406,7 @@ ehockey
 ehrgeiz
 ehrgeizja
 ehrgeizua
+eibise
 eightfrc
 eightman
 einning
@@ -3466,6 +3479,7 @@ enigma2
 enigma2a
 enigma2b
 enmadaio
+enterp
 ep128
 ep64
 epacman2
@@ -3530,7 +3544,6 @@ evosocc
 excali64
 excelsr
 excelsra
-exchess
 excitebk
 excitebkj
 excitebko
@@ -3544,6 +3557,7 @@ exctsccrb
 exctsccrj
 exctsccrjo
 exctsccru
+exechess
 exedexes
 exerion
 exerionb
@@ -3557,6 +3571,7 @@ exorciser
 exorterm155
 exp85
 expcard
+expchess
 expert10
 expert11
 expert13
@@ -3827,6 +3842,7 @@ felega1
 felega2
 felega3
 fellow
+fengyunh
 fenixn
 feversoc
 feversos
@@ -4361,6 +4377,7 @@ gameking
 gamemach
 gamepock
 gametngk
+gamezn2
 gammonm2
 gamshara
 gamsharao
@@ -4754,6 +4771,7 @@ goupilg1
 goupilg2
 gowcaizr
 gp98
+gp98a
 gpgolf
 gpgolfa
 gpilots
@@ -5099,6 +5117,7 @@ hachamfb
 hachamfp
 hacher
 hachoo
+hachooa
 haekaka
 hal21
 hal21j
@@ -5539,6 +5558,7 @@ hyprduel2
 hypreac2
 hypreact
 hyprolym
+hyprolyma
 hyprolymb
 hyprolymba
 hypsptsp
@@ -6130,6 +6150,7 @@ jongbou2
 jongkyo
 jongshin
 jongtei
+jongteia
 jopac
 journey
 joust
@@ -6988,6 +7009,8 @@ lwingsj
 lwingsja
 lx_jg7410
 lx_jg7415
+lxairjet
+lxnoddy
 lxspidaj
 lynx
 lynx128k
@@ -8152,6 +8175,7 @@ mtwins
 mtwinsb
 mtx500
 mtx512
+mu50
 mugsmash
 multchmp
 multchmpa
@@ -8254,6 +8278,7 @@ mystwarrj
 mystwarru
 myvision
 mywicogt
+mz1
 mz2500
 mz2520
 mz700
@@ -8395,8 +8420,6 @@ new2001
 newapunk
 newfant
 newfanta
-newhunter
-newhunterb
 newmcard
 newpuc2
 newpuc2b
@@ -8874,6 +8897,7 @@ pangpomsn
 panic
 panic2
 panic3
+panic4
 panicbom
 panicger
 panich
@@ -8893,6 +8917,7 @@ paradise
 paradisea
 paradisee
 paradlx
+parentj
 parodius
 parodiusa
 parodiuse
@@ -9928,6 +9953,7 @@ pleiadce
 pleiads
 pleiadsb2
 pleiadsi
+pleiadsia
 pleiadsn
 pleiadss
 plgirls
@@ -9991,6 +10017,7 @@ polepos2b
 polepos2bi
 polepos2bs
 poleposa1
+poleposa1n
 poleposa2
 poleposj
 polgar
@@ -10247,6 +10274,7 @@ pspikesba
 pspikesc
 pspikesk
 pspikesu
+psr11
 psr110
 psr150
 psr180
@@ -10291,6 +10319,7 @@ puchicar
 puchicarj
 puchicaru
 puckman
+puckmana
 puckmanb
 puckmanf
 puckmanh
@@ -10483,6 +10512,7 @@ quizardi_10
 quizardi_12
 quizardi_17
 quizchq
+quizchqk
 quizchql
 quizdai2
 quizdais
@@ -10520,6 +10550,7 @@ rabbitj
 rabbitjt
 rabbitpk
 rabiolep
+racechl8
 racedriv
 racedriv1
 racedriv2
@@ -10555,19 +10586,20 @@ rad_gen1
 rad_gen2
 rad_jcon
 rad_md1
-rad_md2
+rad_md1uk
+rad_md2uk
 rad_opus
 rad_orun
 rad_sbw
 rad_sf2
-rad_sf2p
+rad_sf2uk
 rad_sinv
 rad_skat
 rad_skatp
 rad_snow
 rad_snowp
 rad_sonic
-rad_sonicp
+rad_sonicuk
 rad_ssoc
 rad_ssx
 rad_ssxp
@@ -10655,6 +10687,7 @@ rallys
 rallysa
 rallyx
 rallyxa
+rallyxeg
 rallyxm
 rallyxmr
 rambo3
@@ -10812,6 +10845,7 @@ recordbr
 redalert
 redbaron
 redbarona
+redbird
 redclash
 redclashs
 redclasht
@@ -11472,6 +11506,7 @@ scptchess
 scptchessa
 scrabble
 scrabbled
+scrabbleo
 scrablex
 scrablexa
 scrabsen
@@ -11540,6 +11575,7 @@ seawld
 seawldd1
 seawolf
 seawolf2
+seawolfa
 seawolfo
 seawolft
 secolove
@@ -11585,6 +11621,7 @@ senmil
 senpmate
 senspeed
 senstriv
+senterp
 sentetst
 sentx6p
 sentx6pd
@@ -11814,6 +11851,7 @@ sftm110
 sftm111
 sftmj112
 sftmj114
+sftmk112
 sfua
 sfw
 sfx
@@ -11915,6 +11953,7 @@ shdancer
 shdancer1
 shdancerj
 sheenhvc
+shendeng
 sheriff
 shfin_l1
 shienryu
@@ -12500,6 +12539,7 @@ spfghmk22
 sphinx40
 spider
 spidermn
+spidern
 spiders
 spiders2
 spiders3
@@ -12553,6 +12593,7 @@ spool99a
 spool99b
 spool99c
 sporzbx
+sporzbxa
 sporzpp
 sporztn
 spotty
@@ -12735,6 +12776,7 @@ stactics
 stadhero
 stadhr96
 stadhr96j
+stadhr96k
 stadhr96u
 stagger1
 stakwin
@@ -13115,6 +13157,7 @@ sy888b
 sy889
 sym1
 sys573
+syutnori
 syvalion
 syvalionp
 syvalionu
@@ -13311,6 +13354,7 @@ tekkencw
 tekkenjb
 tektagt
 tektagtc1
+tektagtjc1
 tektagtub
 tektagtuc1
 telefevr
@@ -14400,6 +14444,7 @@ victorycb
 victroad
 videight
 video21
+videoart
 videocba
 videodad
 videomat
@@ -14672,6 +14717,7 @@ wexpress
 wexpressb1
 wexpressb2
 wexpressb3
+wfmotor
 wfortune
 wfortunea
 wg3dh
