manual update ini file (mame0261)

--- a/00-databases-00/sorted_info_creation/0XXX/all_in1.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/all_in1.ini
@@ -1,12 +1,15 @@
+88in1joy
 ablmini
 ablpinb
 bittboy
 cybar120
 dgun2573
+dgun2959
 dnv200fs
 fapocket
 fcpocket
 fordrace
+gamezn2
 gprnrs1
 gprnrs16
 ii32in1
@@ -17,6 +20,8 @@ itvg49
 lexiseal
 lexizeus
 lx_jg7415
+lxairjet
+lxnoddy
 m505neo
 m521neo
 majkon
@@ -57,6 +62,7 @@ pjoyn50
 pjoys30
 pjoys60
 ppgc200g
+racechl8
 react
 reactmd
 rminitv
@@ -79,6 +85,7 @@ vgpmini
 vgpocket
 vjpp2
 vsplus
+wfmotor
 zdog
 zone7in1
 zudugo
