update automatically created ini files (mame0262)

--- a/00-databases-00/sorted_info_creation/0XXX/classich.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/classich.ini
@@ -113,7 +113,6 @@ msoccer2
 msthawk
 mwcbaseb
 mwcfootb
-nstarfox
 nummunch
 packmon
 pairmtch
@@ -126,6 +125,8 @@ racetime
 raisedvl
 rockpin
 rzbatfor
+rzindy500
+rztoshden
 skywriter
 splasfgt
 splitsec
@@ -134,12 +135,11 @@ stopthief
 stopthiefp
 subwars
 t7in1ss
-taddams
 talkingbb
 talkingfb
 tbaskb
 tbreakup
-tbttf
+tbtoads
 tc4
 tc7atc
 tcaveman
