--- a/00-databases-00/sorted_info_creation/0XXX/good.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/good.ini
@@ -175,9 +175,13 @@ aburner2g
 ac1
 ac1_32
 academy
+academyd
 academyg
 academyga
+academygb
+academytt
 acchi
+accord
 ace
 ace100
 ace1000
@@ -219,6 +223,7 @@ adam
 addocalc
 adillor
 adillorj
+adonisu
 adpoker
 advision
 advsnha
@@ -369,6 +374,7 @@ alpok_f6
 alpok_l2
 alpok_l6
 altair
+altair2
 altbeast
 altbeast2
 altbeast4
@@ -419,7 +425,7 @@ ampro
 amspdwy
 amspdwya
 amsterd
-amsterda
+amsterdg
 amu880
 amusco
 amuse
@@ -520,6 +526,7 @@ aquarium
 aquariumj
 aquarius
 aquarius2
+aquarius_ar
 aquariusp
 aquarush
 ar_airh
@@ -579,6 +586,7 @@ argus
 argusg
 arian
 arist_l1
+aristmk5
 ark1ball
 arkangc
 arkangc2
@@ -947,6 +955,7 @@ bbmanw
 bbmanwj
 bbmanwja
 bbnny_l2
+bbnny_lg
 bbnny_lu
 bbombo
 bbonk
@@ -1151,6 +1160,7 @@ blkou_l1
 blkou_t1
 blkpnthr
 blkrhino
+blkrhinonz
 blkshpsq
 blktch2
 blktiger
@@ -1307,6 +1317,9 @@ boomrang
 boomranga
 boonggab
 boothill
+bootsctnu
+bootsctnua
+bootsctnub
 borench
 borencha
 borenchj
@@ -1343,6 +1356,7 @@ boxer
 boxingb
 boxyboy
 boxyboya
+bparty
 bpengo
 bradley
 brain
@@ -1382,6 +1396,7 @@ brix
 brixian
 brkball
 brkblast
+brke23p2
 brkthru
 brkthrubl
 brkthruj
@@ -1685,6 +1700,7 @@ cascade
 cashcatnz
 cashcham
 cashchamnz
+cashchamu
 cashquiz
 casino5
 casino5a
@@ -1786,6 +1802,7 @@ ccboot2
 ccbootmm
 ccbootmr
 ccdelta1
+cchance
 cchasm
 cchasm1
 cchime
@@ -2220,6 +2237,7 @@ comotionp
 comp4
 compan
 compan2
+compan3
 compani1
 comparc
 comparca
@@ -2246,9 +2264,11 @@ condorva
 congo
 congoa
 conquest
+conquist
 const
 const36
 const36a
+constjr
 constq
 contcirc
 contcircj
@@ -2518,10 +2538,12 @@ ctribeua
 ctrpllrp
 ctstein
 ctsttape
+ctvboy
 cubeqst
 cubeqsta
 cubo
 cubybop
+cuckoou
 cuebrick
 cuebrickj
 cultures
@@ -2583,6 +2605,7 @@ cyvern
 cyvernj
 cz1
 cz101
+cz230s
 czeroize
 czmon
 czmon_12
@@ -2647,8 +2670,9 @@ daitorida
 daiyogen
 dakkochn
 dallas16
-dallas16a
+dallas16g
 dallas32
+dallas32a
 dambustr
 dambustra
 dambustruk
@@ -2831,6 +2855,7 @@ ddrfammt
 ddribble
 ddribblep
 ddrj
+ddrjb
 ddrkids
 ddrstraw
 ddru
@@ -2896,6 +2921,7 @@ defender
 defenderb
 defenderg
 defenderj
+defenderom
 defenderw
 defense
 defenseb
@@ -3008,6 +3034,7 @@ dimahoud
 dina
 dindice
 diner_f2
+diner_g2
 diner_l1
 diner_l2
 diner_l3
@@ -3077,6 +3104,10 @@ dkongo
 dkongpe
 dkongx
 dkongx11
+dlair
+dlaird
+dlaire
+dlairf
 dland
 dleague
 dleaguej
@@ -3129,6 +3160,10 @@ dokyusp
 dolmen
 dolphntra
 dolphntrb
+dolphntrce
+dolphntrcea
+dolphntrceb
+dolphntru
 domino
 dominoa
 dominob
@@ -3347,6 +3382,7 @@ earthjkr
 earthjkra
 earthjkrb
 earthjkrp
+eatpm_3g
 eatpm_4g
 eatpm_4u
 eatpm_f1
@@ -3362,6 +3398,7 @@ ebball3
 ebknight
 ec1840
 ec1841
+ecbackg
 ecircus
 eclipse
 ecofghtr
@@ -3370,6 +3407,7 @@ ecofghtrd
 ecofghtrh
 ecofghtru
 ecofghtru1
+edames
 edf
 edfa
 edfbl
@@ -3387,9 +3425,10 @@ efball
 efdt
 efootb4
 eforest
-eforesta
-eforestb
+eforestnz
+eforestu
 eforsta5
+eforsta5cea
 egalaxn2
 egghunt
 eggor
@@ -3536,7 +3575,9 @@ eti660
 eto
 eturtles
 euroch92
+euroch92j
 eurogael
+europa
 evilngt
 evilston
 evmbug
@@ -4087,7 +4128,12 @@ fpointbj
 fpointbl
 fpointd
 fpres
+fpresa
+fpresb
 fpresbu
+fpresc
+fpresd
+fprese
 fpresgla
 fredmem
 fredmemc
@@ -4152,6 +4198,8 @@ fruitstbd
 fruitstbe
 fruitstbf
 fruitstbg
+fruitstbh
+fruitstbi
 fs1300
 fs4000
 fs4000a
@@ -4241,6 +4289,7 @@ g13knd
 ga2
 ga2j
 ga2u
+ga888
 gahaha
 gahaha2
 gaia
@@ -4252,6 +4301,7 @@ gaiden
 gakupara
 gakusai
 gakusai2
+gakusaia
 gal10ren
 galactic
 galactica2
@@ -4353,6 +4403,7 @@ galpans2a
 galpans2j
 galpans3
 galpansu
+galpansua
 galsnew
 galsnewj
 galsnewk
@@ -4367,6 +4418,7 @@ galxwarst
 galxwarst2
 gamate
 gambit
+gambler
 gameboy
 gamecom
 gamefgtr
@@ -4597,6 +4649,7 @@ glasskr
 gldarrow
 gldncrwn
 gldnpkr
+glizrdce
 gloc
 glocr360
 glocr360j
@@ -4740,11 +4793,15 @@ goldnaxej
 goldnaxejd
 goldnaxeu
 goldnaxeud
+goldnjkr
+goldnjkra
 goldnpkb
 goldnpkc
 goldnpke
 goldnpkf
 goldnpkr
+goldpyr
+goldpyra
 goldstar
 goldstbl
 golgo13
@@ -4844,6 +4901,7 @@ grindstm
 grindstma
 grmatch
 grndtour
+grnlizrd
 grobda
 grobda2
 grobda3
@@ -5110,6 +5168,7 @@ h2hhockey
 h2hhockeyc
 h2hsoccerc
 h8
+h88
 h89
 hachamf
 hachamfa
@@ -5368,6 +5427,7 @@ hnfubuki
 hngmnjpm
 hngmnjpmd
 hnkochou
+hnktonku
 hnoridur
 hobby
 hoccer
@@ -5476,13 +5536,14 @@ hstennis10
 ht68k
 htchctch
 htengoku
-hthero
 hthero93
 hthero93u
 hthero94
 hthero95
 hthero95a
 hthero95u
+htheroj
+htherou
 httip_l1
 hunchbak
 hunchbaka
@@ -5625,6 +5686,8 @@ imsorry
 imsorryj
 inca
 incasunnz
+incasunu
+incasunua
 ind250cc
 indianbt
 indianbtbr
@@ -5964,6 +6027,7 @@ jackal
 jackalbl
 jackalj
 jackalr
+jackhous
 jackie
 jackler
 jackrabt
@@ -6086,13 +6150,15 @@ jojoa
 jojoar1
 jojoar2
 jojoba
-jojobaj
 jojobajr1
+jojobajr2
 jojoban
-jojobane
 jojobaner1
+jojobaner2
 jojobanr1
+jojobanr2
 jojobar1
+jojobar2
 jojoj
 jojojr1
 jojojr2
@@ -6374,6 +6440,7 @@ kf2k3pl
 kf2k3upl
 kf2k5uni
 kgalaha
+kgalahce
 kgarfld
 kgbird
 kgbirda
@@ -6467,6 +6534,7 @@ knockout
 knockoutb
 knockoutc
 knpuzzle
+koalamnt
 kod
 kodb
 kodj
@@ -6636,6 +6704,7 @@ kurukuru
 kuzmich
 kvakazad
 kviper
+kyhatonu
 kyros
 kyrosj
 kyuhito
@@ -6890,6 +6959,7 @@ locoboot
 locoloot
 locoloota
 locolootnz
+locolootu
 locomotn
 loderndf
 loderndfa
@@ -6951,6 +7021,7 @@ luckgrln
 lucky74
 lucky74a
 lucky7i
+lucky7x
 lucky8
 lucky8a
 lucky8b
@@ -6971,6 +7042,7 @@ luckybalc
 luckybald
 luckybale
 luckyclo
+luckycoin
 luckygrl
 luckypkr
 luckyrlt
@@ -7155,6 +7227,9 @@ magicrd2b
 magicrd2c
 magicrdeb
 magicstk
+magimask
+magimaska
+magimaskb
 magipur
 magix
 magixb
@@ -7194,6 +7269,8 @@ majorpkr
 majorpkra
 majorpkrb
 majorpkrc
+majrjh
+majrjhdx
 majs101b
 majtitl2
 majtitl2a
@@ -7250,6 +7327,8 @@ mariof
 marioj
 mariorou
 markham
+marmagicu
+marmagicua
 mars
 marsarf
 martmast
@@ -7808,6 +7887,7 @@ mm2b
 mm2c
 mm2d
 mm2e
+mm2nona
 mm4
 mm4a
 mm4b
@@ -7956,6 +8036,7 @@ mouja
 mouncrst
 mountmon
 mountmona
+mountmonua
 mouseatk
 mouser
 mouserc
@@ -8289,6 +8370,7 @@ mz80kj
 nabupc
 nagano98
 naganoj
+naltair
 nam1975
 namcons1
 namcons2
@@ -8328,6 +8410,8 @@ nbahangtm13
 nbajam
 nbajamex
 nbajamexa
+nbajamp1
+nbajamp2
 nbajamr1
 nbajamr2
 nbajamte
@@ -8338,6 +8422,7 @@ nbajamte3
 nbajamte3a
 nbajamte4
 nbajamten
+nbajamtep2
 nbamht
 nbamhtl10
 nbamhtm10
@@ -8559,6 +8644,8 @@ nova2001
 nova2001h
 nova2001u
 novoplay
+novoplaya
+novoplayb
 nprinces
 nprincesb
 nprinceso
@@ -8583,6 +8670,10 @@ nstarfox
 nstocker
 nstockera
 nsub
+nsvip
+nsvipa
+nsvipb
+nsvipc
 ntopstar
 numanath
 numanathj
@@ -8593,6 +8684,7 @@ numcrash
 nummunch
 nunchaku
 nupogodi
+nvip
 nvs_machrider
 nvs_machridera
 nvs_mightybj
@@ -8655,7 +8747,8 @@ olibochu
 olivm15
 olmandingc
 olmandingo
-omar
+omar1
+omar2
 omega
 omegaa
 omegab
@@ -8683,7 +8776,6 @@ openice
 openicea
 openmj
 oplayer
-optiger
 opwolf
 opwolf3
 opwolf3j
@@ -8927,6 +9019,8 @@ parrot3b1
 parrot3d1
 parrot3o
 parrot3v1
+partygrs
+partygrsa
 pasha2
 pass
 passsht
@@ -8977,6 +9071,7 @@ pbobblen
 pbobblenb
 pbqbert
 pbss330
+pbss330a
 pbss330ca
 pbst30
 pbst30a
@@ -9158,6 +9253,8 @@ pengomc2
 pengopac
 pengpaya
 pengpayc
+pengpayce
+pengpuck
 penky
 penkyi
 pent1024
@@ -9978,6 +10075,7 @@ pmd852b
 pmd853
 pmi80
 pmpoker
+pn8800
 pnickj
 pnkpnthr
 pnyaa
@@ -9996,6 +10094,7 @@ pokemini
 poker41
 poker91
 pokeresp
+pokeri
 pokeriwc
 pokermon
 pokerout
@@ -10249,6 +10348,7 @@ psion3a2_de
 psion3a2_ru
 psion3c
 psion3mx
+psion3mx_fr
 psion3s
 psion5mx
 psioncm
@@ -10454,8 +10554,13 @@ qmhayaku
 qndream
 qnileb
 qnilebr
+qnilece
+qnilecea
+qnileceb
 qnilenl
 qnilenz
+qnileu
+qnileua
 qntoond
 qntoondo
 qos
@@ -11135,7 +11240,7 @@ rollr_l2
 rollr_l3
 rollr_p2
 roma16
-roma16a
+roma16g
 roma2
 roma32
 rompers
@@ -11598,6 +11703,7 @@ seiham
 selfeena
 seljan
 seljan2
+seljan2a
 selz80
 semibase
 sen101
@@ -11917,6 +12023,7 @@ shadfrceu
 shadowld
 shadoww
 shadowwa
+shambros
 shangha2
 shangha2a
 shangha3
@@ -12109,6 +12216,7 @@ skelagon
 skijump
 skill98
 skilldrp
+skilldrpa
 skimaxx
 skingame
 skingame2
@@ -12169,6 +12277,7 @@ slapshot
 slapshotj
 slapshtr
 slc1
+sldeluxe
 slepachi
 slicer
 slikshot
@@ -12760,7 +12869,6 @@ ssridersuda
 ssrj
 sss
 sstar28k
-sstar36k
 sstar97
 sstarbtl
 sstarcrs
@@ -12869,6 +12977,7 @@ stocker
 stoffy
 stoffyu
 stompin
+stompina
 stoneage
 stonebal
 stonebal2
@@ -13162,6 +13271,7 @@ syvalion
 syvalionp
 syvalionu
 syvalionw
+sz1
 szaxxon
 szone_l2
 szone_l5
@@ -13172,6 +13282,7 @@ t1000sx
 t1000tl
 t1000tl2
 t1000tx
+t1850
 t3in1sa
 t4426
 t7in1ss
@@ -13304,6 +13415,7 @@ tdragon3h
 tdragonb
 tdragonb3
 tdummies
+tdv2115l
 teamht
 teammate
 teamqb
@@ -13338,6 +13450,7 @@ tekken2jb
 tekken2jc
 tekken2ua
 tekken2ub
+tekken2ud
 tekken3
 tekken3a
 tekken3b
@@ -13381,6 +13494,7 @@ tenkomor
 tenkomorja
 tenthdeg
 tenup
+teqsun
 term2
 term2la1
 term2la2
@@ -13449,6 +13563,8 @@ thalone2
 tharrier
 tharrierb
 tharrieru
+thayers
+thayersa
 the26thz
 theboat
 thedealr
@@ -13603,6 +13719,7 @@ timetp25
 timetp36
 timetp7
 timetrv
+timetrv2
 timetunl
 tinday
 tinklpit
@@ -13670,6 +13787,7 @@ tm7kmna
 tm7knj
 tm8k
 tm8k902
+tmate
 tmbaskb
 tmc2000
 tmc600s2
@@ -13870,6 +13988,7 @@ tp84a
 tp84b
 tpc310
 tpgolf
+tpitfight
 tpp311
 tps312
 tqst
@@ -13892,6 +14011,7 @@ trebltop
 tricktrp
 trigon
 trikitri
+triomphe
 triothep
 triothepj
 tripdraw
@@ -14028,6 +14148,7 @@ tst_galx
 tst_invd
 tstar432
 tstar432a
+tstar432b
 tstrider
 tstrike
 tstrikea
@@ -14057,6 +14178,7 @@ tunhunt
 tunhuntc
 tunixha
 turbo
+turbo16k
 turboa
 turbob
 turbobl
@@ -14105,6 +14227,7 @@ tvg2000
 tvgame
 tvindictr
 tvlinkp
+tvochken
 tvsprt10
 twcup90
 twcup90a
@@ -14207,6 +14330,7 @@ uniap2pt
 uniap2ti
 unichamp
 unicorndnz
+unicorndu
 unior
 unitron
 uniwars
@@ -14355,6 +14479,7 @@ vc4000
 vc6000
 vcarn
 vcc
+vcca
 vcircle
 vclock3
 vcs80
@@ -14495,6 +14620,7 @@ viostormeb
 viostormj
 viostormu
 viostormub
+viostormubbl
 vip
 vip64
 vipclub
@@ -14603,6 +14729,7 @@ vz200
 vz2000
 vz300
 wacko
+wafricau
 wakuwak7
 wallc
 wallca
@@ -14700,6 +14827,7 @@ wcbowl161
 wcbowl165
 wcbowldx
 wcougar
+wcougaruc
 wcvol95
 wcvol95j
 wcvol95x
@@ -14732,6 +14860,8 @@ wheelfir
 wheelrun
 whirl_l2
 whirl_l3
+whirl_lg1
+whirl_lg2
 whirl_lg3
 whizz
 whodunit
@@ -14761,8 +14891,6 @@ wingwar
 wingwar360
 wingwarj
 wingwaru
-wink
-winka
 winner81
 winner81b
 winner82
@@ -15034,6 +15162,7 @@ xybotsf
 xybotsg
 xymg
 xyonix
+y301xl
 y503iir
 y503iir2
 y532xl
