--- a/00-databases-00/sorted_info_creation/0XXX/lightgun.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/lightgun.ini
@@ -264,6 +264,8 @@ jdredd
 jdreddb
 jnero
 jorn720
+jpark3
+jpark3u
 kdeadeye
 kyhatonu
 laseract
@@ -385,6 +387,7 @@ mo5
 mo5e
 mo5nr
 mo6
+mocapglf
 mok
 monoplcl
 monoplcld
@@ -425,7 +428,6 @@ ohbakyuun
 omv1000
 omv2000
 oneshot
-optiger
 opwolf
 opwolf3
 opwolf3j
@@ -438,6 +440,15 @@ opwolfp
 opwolfu
 p500
 p500p
+p911
+p9112
+p911ac
+p911ea
+p911ed
+p911j
+p911k
+p911kc
+p911ud
 palmiii
 palmiiic
 palmm100
@@ -527,6 +538,7 @@ sc3000
 sc3000h
 scrabble
 scrabbled
+segaai
 segacd
 segacd2
 sg1000
