--- a/00-databases-00/sorted_info_creation/0XXX/neogeo.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/neogeo.ini
@@ -129,6 +129,8 @@ lasthope
 lastsold
 lbowling
 legendos
+looptris
+looptrsp
 lresort
 lresortp
 magdrop2
@@ -165,6 +167,7 @@ neobombe
 neocup98
 neodrift
 neomrdo
+neotris
 ninjamas
 nitd
 nitdbl
